kernel/tests/ui/oversized_partition_config.stderr
error[E0080]: evaluation panicked: KERNEL_CORE_OFFSET + CORE_NEXT_PARTITION_OFFSET exceeds literal-pool offset limit
  --> tests/ui/oversized_partition_config.rs:11:1
   |
11 | kernel::define_pendsv!(OversizedConfig);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `kernel::define_pendsv` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: Core metadata region exceeds literal-pool offset limit: reduce partition count
  --> tests/ui/oversized_partition_config.rs:11:1
   |
11 | kernel::define_pendsv!(OversizedConfig);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `kernel::define_pendsv` (in Nightly builds, run with -Z macro-backtrace for more info)
